--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body{
     position: fixed;
 }
 .container-fluid{
-    background-color: blue;
+    background-color: rgb(218, 190, 127);
 }
 .foot{
     text-align: center;
@@ -39,15 +39,10 @@ div{
 }
 
 .topbar-responsive-button {
-
-    color: #fefefe;
-  
-    border-color: #fefefe;
-  
-    border-radius: 5000px;
-  
+    color: #fefefe;  
+    border-color: #fefefe;  
+    border-radius: 5000px;  
     transition: color 0.15s ease-in, border-color 0.15s ease-in;
-  
-  }
+}
 
 
