--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,9 @@
 *{
     box-sizing: border-box;
-    float: left;
+    
+}
+h1{
+    text-decoration: underline;
 }
 body{
     background-image: url(../img/wallpaper-shadowlands-zerschmetterter-himmel.jpg);
@@ -8,24 +11,29 @@ body{
     background-size: cover;
     background-attachment: fixed;     
 }
-.head{
-    position: fixed;
-}
+
 .container-fluid{
     background-color: rgb(218, 190, 127);
+    position: fixed;
+    margin-top: 25px;
 }
-.foot{
+.footer{
+    font-size: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     text-align: center;
 }
 .row{ 
     width: 99vw;
     height: auto;
 }
-div{
-    color: black;
-    font-size:larger;
-    }
 
+.ba1{
+    border: solid;
+    background-color: burlywood;
+    background-color: transparent 20%;
+}
 
 .überschrift1{
     position: fixed;
@@ -33,16 +41,19 @@ div{
     
 }
 .logo {
-    width: 70%;
+    width: 50%;
     height: auto;
-    margin-left: 32%;
+    margin-left: 27%;        
 }
 
 .topbar-responsive-button {
     color: #fefefe;  
-    border-color: #fefefe;  
-    border-radius: 5000px;  
+    border-color: rgb(218, 190, 127);  
+    border-radius: 5000px;      
     transition: color 0.15s ease-in, border-color 0.15s ease-in;
 }
 
+.trennlinie {
+    background-color: rgb(246, 244, 81);
+}
 
