--- a/css/style.css
+++ b/css/style.css
@@ -4,21 +4,39 @@
 }
 h1{
     text-decoration: underline;
-}
+}    
+/* CSS für den Hintergrund */
 body{
     background-image: url(../img/wallpaper-shadowlands-zerschmetterter-himmel.jpg);
     background-position: center;
     background-size: cover;
     background-attachment: fixed;     
 }
-
+/* CSS für die Navbar */
 .container-fluid{
     background-color: rgb(218, 190, 127);
-    position: fixed;
-    margin-top: 25px;
+    margin-top: 5px;    
 }
+.topbar-responsive-button {
+    color: #fefefe;  
+    border-color: rgb(218, 190, 127);  
+    border-radius: 5000px;      
+    transition: color 0.15s ease-in, border-color 0.15s ease-in;
+}
+.reg{
+    color: black;  
+}
+.log{
+   color: black;      
+} 
+/* CSS für den Footer */
 .footer{
+    border: solid green;
+    background-color: transparent 100% ;
+    color:  black;
     font-size: 50px;
+    margin-left: 12px;
+    
     display: flex;
     align-items: center;
     justify-content: center;
@@ -29,31 +47,37 @@ body{
     height: auto;
 }
 
-.ba1{
-    border: solid;
-    background-color: burlywood;
-    background-color: transparent 20%;
-}
-
-.überschrift1{
-    position: fixed;
-    text-align: center;
-    
-}
 .logo {
     width: 50%;
     height: auto;
-    margin-left: 27%;        
+    margin-left: 27%;
+    margin-top: 50px;        
 }
-
-.topbar-responsive-button {
-    color: #fefefe;  
-    border-color: rgb(218, 190, 127);  
-    border-radius: 5000px;      
-    transition: color 0.15s ease-in, border-color 0.15s ease-in;
+/* CSS für die News */
+.ba{
+    border: solid;
+    background-color: burlywood;
+    background-color: transparent 50%;
 }
-
+.BaÜberschriften{
+    color: black;
+    text-decoration: underline black;
+}
 .trennlinie {
     background-color: rgb(246, 244, 81);
 }
+
+.imgba{   
+    margin-left: 5px;
+    margin-right: 15px;
+    border:solid;
+    width: 250px;
+    height: 200px;
+    float: left; 
+}
+
+ .txtba{   
+    margin: 5px;
+    
+} 
 
