--- a/css/style.css
+++ b/css/style.css
@@ -10,9 +10,12 @@ body{
     background-image: url(../img/wallpaper-shadowlands-zerschmetterter-himmel.jpg);
     background-position: center;
     background-size: cover;
-    background-attachment: fixed;     
+    background-attachment: fixed;   
 }
 /* CSS für die Navbar */
+.bg-light{
+  background-color:rgb(218, 190, 127) !important ;
+}
 .container-fluid{
     background-color: rgb(218, 190, 127);
     margin-top: 5px;    
@@ -29,24 +32,11 @@ body{
 .log{
    color: black;      
 } 
-/* CSS für den Footer */
-.footer{
-    border: solid green;
-    background-color: transparent 100% ;
-    color:  black;
-    font-size: 50px;
-    margin-left: 12px;
-    
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-}
 .row{ 
     width: 99vw;
-    height: auto;
+    height: auto;    
 }
-
+/* CSS für den Footer */
 .logo {
     width: 50%;
     height: auto;
@@ -63,21 +53,187 @@ body{
     color: black;
     text-decoration: underline black;
 }
-.trennlinie {
-    background-color: rgb(246, 244, 81);
-}
-
+.trennlinie{
+  border: 0;
+  width: 100%;
+  height: 10px;
+  background-color: rgb(255, 223, 0);
+  
+  }
 .imgba{   
-    margin-left: 5px;
+    margin-left: -10px;
     margin-right: 15px;
     border:solid;
     width: 250px;
     height: 200px;
     float: left; 
 }
-
  .txtba{   
-    margin: 5px;
-    
+    margin: 5px;   
 } 
+/* CSS Für Impressum */
+.textimp{
+  padding-left: 15px; 
+}
+.h2imp{
+  text-decoration: underline;
+}
+/* CSS Für Anmeldung */
+.anmeldung{
+  border: solid;
+  background-color: burlywood;
+  margin: 0 auto;
+  margin-top: 15%;
+  width: 315px;
+  height: 400px;
+}
+.anmeldefenster{
+  border:  thin solid black;
+  background-color: black;
+  color: white;
+  text-align: center;
+}
+.anmeldefenster2{
+margin-left: 10px;
+}
+/* CSS für Login */
+.loginfenster{
+    border: solid;
+    background-color: burlywood;
+    margin: 0 auto;
+    margin-top: 15%;
+    width: 315px;
+    height: 285px;
+}
+.loginfenster1{
+    border:  thin solid black;
+    background-color: black;
+    color: white;
+    text-align: center;
+}
+.loginfenster2{
+  margin-left: 10px;
+}
+#email{
+    margin-left: 22px;
+}
+.senden{
+    margin-left: 120px;
+}
+.passwordvergessen{
+    font-size: 12px;
+}
+/* CSS Für fertigen Footer */
+footer {
+  background: #16222A;
+  background: -webkit-linear-gradient(59deg, #3A6073, #16222A);
+  background: linear-gradient(59deg, #3A6073, #16222A);
+  color: white;
+  margin-top:100px;
+}
 
+footer a {
+  color: #fff;
+  font-size: 14px;
+  transition-duration: 0.2s;
+}
+
+footer a:hover {
+  color: #FA944B;
+  text-decoration: none;
+}
+
+.copy {
+  padding-left: 50px;
+  font-size: 12px;
+  padding: 10px;
+  border-top: 1px solid #FFFFFF;
+}
+
+.footer-middle {
+  padding-top: 2em;
+  color: white;
+}
+
+
+/*SOCİAL İCONS*/
+
+/* footer social icons */
+
+ul.social-network {
+  list-style: none;
+  display: inline;
+  margin-left: 0 !important;
+  padding: 0;
+}
+
+ul.social-network li {
+  display: inline;
+  margin: 0 5px;
+}
+
+
+/* footer social icons */
+
+.social-network a.icoFacebook:hover {
+  background-color: #3B5998;
+}
+
+.social-network a.icoLinkedin:hover {
+  background-color: #007bb7;
+}
+
+.social-network a.icoFacebook:hover i,
+.social-network a.icoLinkedin:hover i {
+  color: #fff;
+}
+
+.social-network a.socialIcon:hover,
+.socialHoverClass {
+  color: #44BCDD;
+}
+
+.social-circle li a {
+  display: inline-block;
+  position: relative;
+  margin: 0 auto 0 auto;
+  -moz-border-radius: 50%;
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
+  text-align: center;
+  width: 30px;
+  height: 30px;
+  font-size: 15px;
+}
+
+.social-circle li i {
+  margin: 0;
+  line-height: 30px;
+  text-align: center;
+}
+
+.social-circle li a:hover i,
+.triggeredHover {
+  -moz-transform: rotate(360deg);
+  -webkit-transform: rotate(360deg);
+  -ms--transform: rotate(360deg);
+  transform: rotate(360deg);
+  -webkit-transition: all 0.2s;
+  -moz-transition: all 0.2s;
+  -o-transition: all 0.2s;
+  -ms-transition: all 0.2s;
+  transition: all 0.2s;
+}
+
+.social-circle i {
+  color: #595959;
+  -webkit-transition: all 0.8s;
+  -moz-transition: all 0.8s;
+  -o-transition: all 0.8s;
+  -ms-transition: all 0.8s;
+  transition: all 0.8s;
+}
+
+.social-network a {
+  background-color: #F9F9F9;
+}
